--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta name="keywords" content="стоматологія Кропивницький, стоматолог Кропивницький, лікування зубів, Dentis">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="canonical" href="https://dentis.pp.ua/">
-  <link rel="shortcut icon" href="assets/images/Dentis.png" type="image/svg+xml">
+  <link rel="shortcut icon" href="assets/images/opt/Dentis.avif" type="image/svg+xml">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>  
   <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500;700&family=Rubik:wght@400;500;700&display=swap" rel="stylesheet">
@@ -21,7 +21,7 @@
   <!-- preload hero images (AVIF preferred, then WebP, fallback PNG) -->
   <link rel="preload" fetchpriority="high" as="image" href="./assets/images/opt/hero-bg.avif" type="image/avif">
   <link rel="preload" fetchpriority="high" as="image" href="./assets/images/opt/hero-bg.webp" type="image/webp">
-  <link rel="preload" fetchpriority="high" as="image" href="./assets/images/hero-bg.png" type="image/png">
+  <link rel="preload" fetchpriority="high" as="image" href="./assets/images/opt/hero-bg.avif" type="image/avif">
 <!-- <link rel="manifest" href="/manifest.json">
   <meta name="theme-color" content="#005761">
   <link rel="apple-touch-icon" href="/icons/icon-192.png">
@@ -43,13 +43,13 @@
 <!-- Банер-
   <div id="pwa-banner" class="pwa-banner">
     <div class="pwa-content">
-      <img src="assets/images/Dentis.png" alt="Логотип" class="pwa-logo">
+      <img src="assets/images/opt/Dentis.avif" alt="Логотип" class="pwa-logo">
       <span class="pwa-text">Встановити додаток</span>
       <button id="pwa-install-btn" class="pwa-btn">Встановити</button>
       <button id="pwa-close-btn" class="pwa-close">✕</button>
     </div>
     <div id="ios-instructions" class="ios-instructions">
-      <img src="assets/images/ios-guide.png" alt="Інструкція для iOS">
+      <img src="assets/images/opt/ios-guide.avif" alt="Інструкція для iOS">
       <button id="ios-ok-btn" class="pwa-btn">Зрозуміло</button>
     </div>
   </div> 
@@ -66,12 +66,12 @@
     <header class="header" data-header>
     <div class="container">
       <a href="https://dentis.pp.ua/" class="logo logo-large">
-        <img src="./assets/images/Dentis_with_Text.png" class="logo-img" alt="Dentis">
+        <img src="./assets/images/opt/Dentis_with_Text.avif" class="logo-img" alt="Dentis">
       </a>
       <nav class="navbar" data-navbar id="primary-navigation">
         <div class="navbar-top">
           <a href="https://dentis.pp.ua/" class="logo">
-            <img src="./assets/images/Dentis_with_Text.png" width="120" height="48" alt="Dentis home">
+            <img src="./assets/images/opt/Dentis_with_Text.avif" width="120" height="48" alt="Dentis home">
           </a>
           <button class="nav-close-btn" aria-label="close menu" data-nav-toggler aria-controls="primary-navigation" aria-expanded="false">
             <ion-icon name="close-outline" aria-hidden="true"></ion-icon>
@@ -162,7 +162,7 @@
             <picture>
               <source type="image/avif" srcset="">
               <source type="image/webp" srcset="">
-              <img src="/assets/images/hero-banner.png" alt="Герой банер — стоматологія Dentis" class="w-100">
+              <img src="/assets/images/opt/hero-banner.avif" alt="Герой банер — стоматологія Dentis" class="w-100">
             </picture>
           </figure>
 
@@ -178,7 +178,7 @@
             <li>
               <div class="service-card" data-reveal="bottom">
                 <div class="card-icon">
-                  <img src="./assets/images/logo_1.png" width="71" height="71" loading="lazy" alt="icon">
+                  <img src="./assets/images/opt/logo_1.avif" width="71" height="71" loading="lazy" alt="icon">
 
                 </div>
                 <h3 class="headline-sm card-title">
@@ -194,7 +194,7 @@
             <li>
               <div class="service-card" data-reveal="bottom">
                 <div class="card-icon">
-                  <img src="./assets/images/logo_2.png" width="71" height="71" loading="lazy" alt="">
+                  <img src="./assets/images/opt/logo_2.avif" width="71" height="71" loading="lazy" alt="">
                 </div>
                 <h3 class="headline-sm card-title">
                   <a href="#">Професійне очищення</a>
@@ -209,7 +209,7 @@
             <li>
               <div class="service-card" data-reveal="bottom">
                 <div class="card-icon">
-                  <img src="./assets/images/logo_3.png" width="71" height="71" loading="lazy" alt="">
+                  <img src="./assets/images/opt/logo_3.avif" width="71" height="71" loading="lazy" alt="">
                 </div>
                 <h3 class="headline-sm card-title">
                   <a href="#">Хірургія</a>
@@ -224,7 +224,7 @@
             <li>
               <div class="service-card" data-reveal="bottom">
                 <div class="card-icon">
-                  <img src="./assets/images/logo_4.png" width="71" height="71" loading="lazy" alt="">
+                  <img src="./assets/images/opt/logo_4.avif" width="71" height="71" loading="lazy" alt="">
                 </div>
                 <h3 class="headline-sm card-title">
                   <a href="#">Лікування каналів</a>
@@ -238,7 +238,7 @@
              <li>
               <div class="service-card" data-reveal="bottom">
                 <div class="card-icon">
-                  <img src="./assets/images/logo_5.png" width="71" height="71" loading="lazy" alt="">
+                  <img src="./assets/images/opt/logo_5.avif" width="71" height="71" loading="lazy" alt="">
                 </div>
                 <h3 class="headline-sm card-title">
                   <a href="#">Протезування</a>
@@ -252,7 +252,7 @@
              <li>
               <div class="service-card" data-reveal="bottom">
                 <div class="card-icon">
-                  <img src="./assets/images/logo_6.png" width="71" height="71" loading="lazy" alt="">
+                  <img src="./assets/images/opt/logo_6.avif" width="71" height="71" loading="lazy" alt="">
                 </div>
                 <h3 class="headline-sm card-title">
                   <a href="#">Лікування карієсу та пломбування</a>
@@ -266,7 +266,7 @@
              <li>
               <div class="service-card" data-reveal="bottom">
                 <div class="card-icon">
-                  <img src="./assets/images/logo_7.png" width="71" height="71" loading="lazy" alt="">
+                  <img src="./assets/images/opt/logo_7.avif" width="71" height="71" loading="lazy" alt="">
                 </div>
                 <h3 class="headline-sm card-title">
                   <a href="#">Ортодонтія</a>
@@ -280,7 +280,7 @@
              <li>
               <div class="service-card" data-reveal="bottom">
                 <div class="card-icon">
-                  <img src="./assets/images/logo_8.png" width="71" height="71" loading="lazy" alt="">
+                  <img src="./assets/images/opt/logo_8.avif" width="71" height="71" loading="lazy" alt="">
                 </div>
                 <h3 class="headline-sm card-title">
                   <a href="#">Імплантація</a>
@@ -353,7 +353,7 @@
             <picture>
               <source type="image/avif" srcset="./assets/images/opt/about-banner.avif">
               <source type="image/webp" srcset="./assets/images/opt/about-banner.webp">
-              <img src="./assets/images/about-banner.png" width="554" height="678" loading="lazy" alt="about therapists banner" class="w-100">
+              <img src="./assets/images/opt/about-banner.avif" width="554" height="678" loading="lazy" alt="about therapists banner" class="w-100">
             </picture>
           </figure>
         </div>
@@ -394,7 +394,7 @@
                     <div class="responsive-cell-block wk-desk-3 wk-ipadp-3 wk-tab-6 wk-mobile-12 team-card-container">
                       <div class="team-card">
                         <div class="img-wrapper">
-                          <img class="team-img" src="assets/images/1.png">
+                          <img class="team-img" src="assets/images/opt/1.avif">
                         </div>
                         <p class="text-blk name">
                           Верховський Олександр Олександрович
@@ -421,7 +421,7 @@
                     <div class="responsive-cell-block wk-desk-3 wk-ipadp-3 wk-tab-6 wk-mobile-12 team-card-container">
                       <div class="team-card">
                         <div class="img-wrapper">
-                          <img class="team-img" src="assets/images/sec.png">
+                          <img class="team-img" src="assets/images/opt/sec.avif">
                         </div>
                         <p class="text-blk name">
                           Олег Євгенович
@@ -541,7 +541,7 @@
           <source type="image/avif" srcset="./assets/images/opt/rew1.avif">
           <source type="image/webp" srcset="./assets/images/opt/rew1.webp">
           <img 
-            src="./assets/images/rew1.avif"
+            src="./assets/images/opt/rew1.avif"
             alt="Відгук клієнта Pavlo Bidnenko"
             loading="lazy"
             width="96"
@@ -561,7 +561,7 @@
             <picture>
               <source type="image/avif" srcset="./assets/images/opt/rew3.avif">
               <source type="image/webp" srcset="./assets/images/opt/rew3.webp">
-              <img src="./assets/images/rew3.avif" alt="Відгук клієнта Юліана"
+              <img src="./assets/images/opt/rew3.avif" alt="Відгук клієнта Юліана"
             loading="lazy"
             width="96"
             height="96">
@@ -578,7 +578,7 @@
             <picture>
               <source type="image/avif" srcset="./assets/images/opt/rew2.avif">
               <source type="image/webp" srcset="./assets/images/opt/rew2.webp">
-              <img src="./assets/images/rew2.avif"  alt="Відгук клієнта Людмила"
+              <img src="./assets/images/opt/rew2.avif"  alt="Відгук клієнта Людмила"
             loading="lazy"
             width="96"
             height="96">
@@ -616,7 +616,7 @@
       <div class="section footer-top">
         <div class="footer-brand" data-reveal="bottom">
           <a href="#top" class="logo">
-            <img src="./assets/images/Dentis_with_Text.png" width="136" height="46" loading="lazy" alt="Therapist Home">
+            <img src="./assets/images/opt/Dentis_with_Text.avif" width="136" height="46" loading="lazy" alt="Therapist Home">
           </a>
           <ul class="contact-list has-after">
             <li class="footer-contact-item">
