--- a/index.html
+++ b/index.html
@@ -378,6 +378,7 @@
                   <p class="text-blk position">
                     Головний лікар
                   </p>
+                  <!--
                   <div class="social-media-links">
                     <a href="http://www.twitter.com/" target="_blank">
                       <img src="https://workik-widget-assets.s3.amazonaws.com/widget-assets/images/gray-twitter.svg">
@@ -391,7 +392,7 @@
                     <a href="http://www.gmail.com/" target="_blank">
                       <img src="https://workik-widget-assets.s3.amazonaws.com/widget-assets/images/gray-mail.svg">
                     </a>
-                  </div>
+                  </div>-->
                 </div>
               </div>
               <div class="responsive-cell-block wk-desk-3 wk-ipadp-3 wk-tab-6 wk-mobile-12 team-card-container">
@@ -404,7 +405,7 @@
                   </p>
                   <p class="text-blk position">
                     ортодонт
-                  </p>
+                  </p><!--
                   <div class="social-media-links">
                     <a href="http://www.twitter.com/" target="_blank">
                       <img src="https://workik-widget-assets.s3.amazonaws.com/widget-assets/images/gray-twitter.svg">
@@ -418,7 +419,7 @@
                     <a href="http://www.gmail.com/" target="_blank">
                       <img src="https://workik-widget-assets.s3.amazonaws.com/widget-assets/images/gray-mail.svg">
                     </a>
-                  </div>
+                  </div>-->
                 </div>
               </div>
 
