--- a/index.html
+++ b/index.html
@@ -19,19 +19,12 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
   <link rel="stylesheet" href="./assets/css/style.css">
-<<<<<<< HEAD
   <!-- preload hero images (AVIF preferred, then WebP, fallback PNG) -->
   <link rel="preload" fetchpriority="high" as="image" href="./assets/images/opt/hero-bg.webp" type="image/webp">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js" defer></script>
 <script type="application/ld+json" src="/assets/schema/shchema.jsonld">
 </script>
-=======
-  <link rel="preload" fetchpriority="high" as="image" href="./assets/images/opt/hero-bg.avif" type="image/avif">
-   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
-  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js" defer></script>
-  <script type="application/ld+json" src="/assets/schema/shchema.jsonld"></script>
->>>>>>> 89ff47b (222)
 </head>
 
 
@@ -738,8 +731,9 @@
     </svg>
   </a>
 
-  <!-- bundled scripts -->
-  <script src="assets/dist/bundle.js" defer></script>
+
+ <script type="module" src="assets/js/main.js"></script>
+
 
 
 
