--- a/index.html
+++ b/index.html
@@ -345,27 +345,7 @@
                   </p>
                   <p class="text-blk position">
                     Головний лікар
-<<<<<<< HEAD
                   </p>
-                  <!--
-                  <div class="social-media-links">
-                    <a href="http://www.twitter.com/" target="_blank">
-                      <img src="https://workik-widget-assets.s3.amazonaws.com/widget-assets/images/gray-twitter.svg">
-                    </a>
-                    <a href="http://www.facebook.com/" target="_blank">
-                      <img src="https://workik-widget-assets.s3.amazonaws.com/widget-assets/images/gray-fb.svg">
-                    </a>
-                    <a href="http://www.instagram.com/" target="_blank">
-                      <img src="https://workik-widget-assets.s3.amazonaws.com/widget-assets/images/gray-insta.svg">
-                    </a>
-                    <a href="http://www.gmail.com/" target="_blank">
-                      <img src="https://workik-widget-assets.s3.amazonaws.com/widget-assets/images/gray-mail.svg">
-                    </a>
-                  </div>-->
-=======
-                  </p>
-                  </div>
->>>>>>> 89ff47b (222)
                 </div>
               </div>
               <div class="responsive-cell-block wk-desk-3 wk-ipadp-3 wk-tab-6 wk-mobile-12 team-card-container">
@@ -378,25 +358,7 @@
                   </p>
                   <p class="text-blk position">
                     ортодонт
-<<<<<<< HEAD
-                  </p><!--
-                  <div class="social-media-links">
-                    <a href="http://www.twitter.com/" target="_blank">
-                      <img src="https://workik-widget-assets.s3.amazonaws.com/widget-assets/images/gray-twitter.svg">
-                    </a>
-                    <a href="http://www.facebook.com/" target="_blank">
-                      <img src="https://workik-widget-assets.s3.amazonaws.com/widget-assets/images/gray-fb.svg">
-                    </a>
-                    <a href="http://www.instagram.com/" target="_blank">
-                      <img src="https://workik-widget-assets.s3.amazonaws.com/widget-assets/images/gray-insta.svg">
-                    </a>
-                    <a href="http://www.gmail.com/" target="_blank">
-                      <img src="https://workik-widget-assets.s3.amazonaws.com/widget-assets/images/gray-mail.svg">
-                    </a>
-                  </div>-->
-=======
-                  </p>                 
->>>>>>> 89ff47b (222)
+                  </p>
                 </div>
               </div>
 
@@ -493,8 +455,8 @@
       <div class="container">
         <h2 class="heading" id="review-heading">
           Відгуки пацієнтів
-        </h2>       
-           <div class="box-container">
+        </h2>   
+           <div class="box">
             <div class="review-card">
                 <img src="./assets/images/opt/rew1.avif" alt="Відгук клієнта Pavlo Bidnenko" loading="lazy" width="96"
                   height="96">
@@ -508,6 +470,8 @@
                 все швидко та якісно. Буду ходити далі саме сюди.
               </p>
             </div>
+            </div>
+             <div class="box">
             <div class="review-card">
              
                 <img src="./assets/images/opt/rew3.avif" alt="Відгук клієнта Юліана" loading="lazy" width="96"
@@ -525,7 +489,8 @@
                 Дентіс. Ідіть сміливо та не сумнівайтеся. Вам нададуть потрібну допомогу не за космічні гроші.
               </p>
             </div>
-
+</div>
+<div class="box">
             <div class="review-card">
             
                 <img src="./assets/images/opt/rew2.avif" alt="Відгук клієнта Людмила" loading="lazy" width="96"
@@ -540,7 +505,7 @@
                 лікарю Антону, так як лікувалася саме у нього. Звернулася в цю клініку за рекомендацією знайомих, не
                 пожалкувала) Мати з Вами справу - одне задоволення! Успіхів ВАМ !!!</p>
             </div>
-          </div>        
+                 </div>
       </div>
     </section>
 
