--- a/index.html
+++ b/index.html
@@ -21,8 +21,6 @@
   <link rel="stylesheet" href="./assets/css/style.css">
   <!-- preload hero images (AVIF preferred, then WebP, fallback PNG) -->
   <link rel="preload" fetchpriority="high" as="image" href="./assets/images/opt/hero-bg.webp" type="image/webp">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
-  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js" defer></script>
 <script type="application/ld+json" src="/assets/schema/shchema.jsonld">
 </script>
 </head>
@@ -338,7 +336,7 @@
               <div class="responsive-cell-block wk-desk-3 wk-ipadp-3 wk-tab-6 wk-mobile-12 team-card-container">
                 <div class="team-card">
                   <div class="img-wrapper">
-                    <img class="team-img" src="assets/images/opt/1.avif" alt="Verh">
+                    <img class="team-img" src="assets/images/opt/1.webp" alt="Verh">
                   </div>
                   <p class="text-blk name">
                     Верховський Олександр Олександрович
@@ -351,7 +349,7 @@
               <div class="responsive-cell-block wk-desk-3 wk-ipadp-3 wk-tab-6 wk-mobile-12 team-card-container">
                 <div class="team-card">
                   <div class="img-wrapper">
-                    <img class="team-img" src="assets/images/opt/sec.avif" alt="doc">
+                    <img class="team-img" src="assets/images/opt/sec.webp" alt="doc">
                   </div>
                   <p class="text-blk name">
                     Антон Євгенович
@@ -451,7 +449,8 @@
 
 
 
-    <section class="review" id="section-review" aria-labelledby="review-heading">
+    <section class="review" id="section review" aria-labelledby="review-heading">
+      <div class="container">
        <h2 class="heading" id="review-heading">
           Відгуки пацієнтів
         </h2> 
@@ -496,6 +495,7 @@
                 лікарю Антону, так як лікувалася саме у нього. Звернулася в цю клініку за рекомендацією знайомих, не
                 пожалкувала) Мати з Вами справу - одне задоволення! Успіхів ВАМ !!!</p>
             </div>                 
+      </div>
       </div>
     </section>
 
@@ -609,28 +609,7 @@
         <p class="text copyright">
           &copy; Дентіс 2025 | All Rights Reserved by Roman Shkurenko
         </p>
-        <ul class="social-list">
-          <li>
-            <a href="#" class="social-link">
-              <ion-icon name="logo-facebook"></ion-icon>
-            </a>
-          </li>
-          <li>
-            <a href="#" class="social-link">
-              <ion-icon name="logo-twitter"></ion-icon>
-            </a>
-          </li>
-          <li>
-            <a href="#" class="social-link">
-              <ion-icon name="logo-instagram"></ion-icon>
-            </a>
-          </li>
-          <li>
-            <a href="#" class="social-link">
-              <ion-icon name="logo-linkedin"></ion-icon>
-            </a>
-          </li>
-        </ul>
+        
       </div>
     </div>
   </footer>
